[package]
name = "anyrouter-check-in"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
chrono = "0.4"
sha2 = "0.10"
lettre = "0.11"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"
colored = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
